--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
   text-align: center;
   font-family: "Century Gothic";  
-  color: #333;
+  color: red;
   font-size: 18px;
   margin:0;
   padding: 0;
