--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 body{
+  background: #1e1f24;
   text-align: center;
   font-family: "Century Gothic";  
   color: #333A;
@@ -8,12 +9,17 @@ body{
 }
 
 #cabecera{
-  background: cadetblue;
+  background: #37488b;
   color: white;
   margin: 0;
   padding: 0.5em;
   font-weight: bold;
   box-shadow: 0px 2px 15px rgba(0,0,0,0.75);
+}
+
+#cabecera #logo{
+  width: 20px;
+  vertical-align: middle;
 }
 
 #cabecera #tagline{
@@ -37,5 +43,6 @@ body{
 }
 
 #post{
+  background: white;
   padding: 1em;
 }
